product/standard/grafana-prometheus-pro/grafana/grafana-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  namespace: monitor
spec:
  serviceName: "grafana"
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: grafana
        #存到你公司自己的镜像仓库，不要用docker官方仓库
        image: grafana/grafana:6.4.2
        ports:
        - containerPort: 3000
          name: grafana
        resources:
          requests:
            cpu: 500m
            memory: 1024Mi
          limits:
            cpu: 500m
            memory: 1024Mi
        volumeMounts:
        - name: pv-metrics-grafana
          mountPath: /var/lib/grafana/k8s-app-config/product/standard/grafana-prometheus-pro/grafana/provisioning
      volumes:
      - name: pv-metrics-grafana
        persistentVolumeClaim:
          claimName: pv-metrics-grafana
      - name: provision-dashboards
        emptyDir: {}
