product/standard/grafana-prometheus-pro/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  ports:
  - port: 3000
    name: http
  type: NodePort
  selector:
    app: grafana
